ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: auth-proxy

spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - backend:
          serviceName: crud-app-service
          servicePort: 80
        path: /user/profile


spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - backend:
            serviceName: storage-service
            servicePort: 80
        path: /storage
      - backend:
            serviceName: billing-service
            servicePort: 80
        path: /billing/account
      - backend:
            serviceName: billing-service
            servicePort: 80
        path: /balance
      - backend:
            serviceName: order-service
            servicePort: 80
        path: /order
      - backend:
            serviceName: notification-service
            servicePort: 80
        path: /email
      - backend:
            serviceName: user-service
            servicePort: 80
        path: /user
